name:                mastodon-types
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/swizzard/mastodon-types#readme
license:             BSD3
license-file:        LICENSE
author:              sam raker
maintainer:          sam.raker@gmail.com
copyright:           2017 sam raker
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Mastodon.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , hourglass
                     , microlens
                     , microlens-th
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/swizzard/mastodon-types
